<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vogerman.gatewaylocator.MainActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/stat_notify_sync"/>


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_gps"
        android:title="@string/action_gps"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_wifi"
        android:title="@string/action_wifi"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
